@@ -1,5 +1,8 @@
 package refraff.typechecker;
 
+import refraff.SourcePosition;
+import refraff.parser.AbstractSyntaxTreeNode;
+import refraff.parser.Node;
 import refraff.parser.Program;
 import refraff.parser.Variable;
 import refraff.parser.struct.*;
@@ -16,20 +19,12 @@ public class Typechecker {
 
     private final Program program;
 
-    private final Map<StructName, StructDef> structNameToDef;
+    private final Map<Standardized<StructName>, StructDef> structNameToDef;
 
-    private Typechecker(Program program) throws TypecheckerException {
+    private Typechecker(Program program) {
         this.program = program;
 
-        // Map all the struct definitions names to their AST definitions
-        // This throws an IllegalStateException if two structs share a name
-        // Should we catch it and throw a TypecheckerException?
-        try {
-            this.structNameToDef = program.getStructDefs().stream()
-                .collect(Collectors.toMap(StructDef::getStructName, structDef -> structDef));
-        } catch (IllegalStateException e) {
-            throw new TypecheckerException("Struct declarations share a name");
-        }
+        this.structNameToDef = new HashMap<>();
     }
 
     public static void typecheckProgram(Program program) throws TypecheckerException {
@@ -38,55 +33,119 @@ public class Typechecker {
 
     private void typecheckProgram() throws TypecheckerException {
         // Create an environment map
-        Map<Variable, Type> typeEnv = new HashMap<>();
+        Map<Standardized<Variable>, Type> typeEnv = new HashMap<>();
         typecheckStructDefs(typeEnv);
         typecheckStatements(typeEnv);
     }
 
-    private void throwTypecheckerException(String beingParsed, String errorSuffix) throws TypecheckerException {
-        final String errorPrefix = "Typechecker error when evaluating " + beingParsed + ": ";
-        final String errorMessage = errorPrefix + errorSuffix;
-
-        throw new TypecheckerException(errorMessage);
-    }
-
-    private void throwTypecheckerExceptionOnVariableExists(String beingParsed, Variable variable,
-                                                                  Map<Variable, Type> typeEnv) throws TypecheckerException {
-        if (!typeEnv.containsKey(variable)) {
+    private void throwTypecheckerExceptionOnVariableExists(String beingParsed, AbstractSyntaxTreeNode parent, Variable variable,
+                                                                  Map<Standardized<Variable>, Type> typeEnv) throws TypecheckerException {
+        if (!typeEnv.containsKey(Standardized.of(variable))) {
             return;
         }
 
-        final String errorSuffix = "expected new variable " + variable.name + " but it is already defined in scope";
-        throwTypecheckerException(beingParsed, errorSuffix);
+        final String errorSuffix = "variable `" + variable.getName() + "` is already defined in this scope";
+        throwTypecheckerException(beingParsed, parent, variable, errorSuffix);
     }
 
-    private Type throwTypecheckerExceptionOnVariableNotExists(String beingParsed, Variable variable,
-                                                                     Map<Variable, Type> typeEnv) throws TypecheckerException {
-        if (typeEnv.containsKey(variable)) {
-            return typeEnv.get(variable);
+    private Type throwTypecheckerExceptionOnVariableNotExists(String beingParsed, AbstractSyntaxTreeNode parent, Variable variable,
+                                                                     Map<Standardized<Variable>, Type> typeEnv) throws TypecheckerException {
+        Standardized<Variable> standardizedVariable = Standardized.of(variable);
+        if (typeEnv.containsKey(standardizedVariable)) {
+            return typeEnv.get(standardizedVariable);
         }
 
-        final String errorSuffix = "expected variable " + variable.name + " to be defined in scope but it is not";
-        throwTypecheckerException(beingParsed, errorSuffix);
+        final String errorSuffix = "variable `" + variable.getName() + "` is not defined in this scope";
+        throwTypecheckerException(beingParsed, parent, variable, errorSuffix);
 
         return null;
     }
 
-    private void throwTypecheckerExceptionOnMismatchedTypes(String beingParsed, Type leftHand, Type rightHand)
+    private void throwTypecheckerExceptionOnMismatchedTypes(String beingParsed, AbstractSyntaxTreeNode parent,
+                                                            AbstractSyntaxTreeNode rightHandChild,
+                                                            Type leftHand, Type rightHand)
             throws TypecheckerException {
-        if (leftHand.equals(rightHand)) {
+        if (leftHand.hasTypeEquality(rightHand)) {
             return;
         }
 
-        final String errorSuffix = "mismatched types LHS is a(n) " + leftHand.getParsedValue() +
-                " RHS is a(n) " + rightHand.getParsedValue();
-        throwTypecheckerException(beingParsed, errorSuffix);
+        final String errorSuffix = rightHandChild.getNodeTypeDescriptor() + " does not match expected type " +
+                leftHand.getSource().getSourceString();
+        throwTypecheckerException(beingParsed, parent, rightHandChild, errorSuffix);
     }
 
-    private void typecheckStructDefs(Map<Variable, Type> typeEnv) throws TypecheckerException {
+    private void throwTypecheckerException(String beingParsed, AbstractSyntaxTreeNode parent,
+                                           AbstractSyntaxTreeNode child, String errorMessage) throws TypecheckerException {
+        SourcePosition childStartPosition = child.getSource().getStartPosition();
+
+        StringBuilder errorMessageBuilder = new StringBuilder();
+
+        errorMessageBuilder.append("Typechecker error when evaluating ");
+        errorMessageBuilder.append(beingParsed);
+        errorMessageBuilder.append(" at ");
+        errorMessageBuilder.append(childStartPosition.toString());
+        errorMessageBuilder.append(":\n");
+
+        String parentNodeString = parent.getSource().getSourceString();
+
+        SourcePosition parentStartPosition = parent.getSource().getStartPosition();
+        SourcePosition childEndPosition = child.getSource().getEndPosition();
+
+        int numberOfLinesToPrint = (childEndPosition.getLinePosition() - parentStartPosition.getLinePosition()) + 1;
+
+        // Append all the lines until the child is fully displayed
+        parentNodeString.lines()
+                .limit(numberOfLinesToPrint)
+                .forEach(line -> {
+                    errorMessageBuilder.append(line);
+                    errorMessageBuilder.append('\n');
+                });
+
+        int numberOfSpacesToPrint = numberOfLinesToPrint == 1
+                ? childStartPosition.getColumnPosition() - parentStartPosition.getColumnPosition()
+                : childStartPosition.getColumnPosition() - 1;
+
+        String spacePrefix = " ".repeat(numberOfSpacesToPrint);
+        String caretPointer = "^".repeat(childEndPosition.getColumnPosition() - childStartPosition.getColumnPosition());
+
+        // Add spaces until we're under the child, then use the caret pointer to point to the child and new line
+        errorMessageBuilder.append(spacePrefix);
+        errorMessageBuilder.append(caretPointer);
+        errorMessageBuilder.append('\n');
+
+        // Add space until we're under the child, then print the error message below the caret pointer and new line
+        errorMessageBuilder.append(spacePrefix);
+        errorMessageBuilder.append("    ");
+        errorMessageBuilder.append(errorMessage);
+        errorMessageBuilder.append('\n');
+
+        String builtErrorMessage = errorMessageBuilder.toString();
+        throw new TypecheckerException(builtErrorMessage);
+    }
+
+    private void typecheckStructDefs(Map<Standardized<Variable>, Type> typeEnv) throws TypecheckerException {
+        final String typeErrorInStructMessageFormat = "struct definition for `%s`";
+        
+        // Add all the structs manually before trying to parse a struct's fields (allow recursion/reference other structs)
+
+        // Map all the struct definitions names to their AST definitions
         for (StructDef structDef : program.getStructDefs()) {
-            final String typeErrorInStructMessage = "Type error in struct definition for "
-                    + structDef.getStructName().structName;
+            StructName structName = structDef.getStructName();
+            Standardized<StructName> standardizedStructName = Standardized.of(structName);
+            
+            // If we don't already have a struct definition defined, add it to the map
+            if (!structNameToDef.containsKey(standardizedStructName)) {
+                structNameToDef.put(standardizedStructName, structDef);
+                continue;
+            }
+            
+            String stringStructName = structName.getName();
+            throwTypecheckerException(String.format(typeErrorInStructMessageFormat, stringStructName),
+                    structDef, structName, "struct type `" + stringStructName + "` has already been defined");
+        }
+        
+        for (StructDef structDef : program.getStructDefs()) {
+            final String typeErrorInStructMessage = "struct definition for `" + structDef.getStructName().structName + "`";
             // Add struct def variable
 
             // I don't think we should add these to the type environment - that would treat them as variables defined in scope
@@ -136,48 +195,51 @@ public class Typechecker {
 
             // Similarly, we most likely would not want functions to put their variables on the type environment
             // until we enter the body of a function
-            Set<Variable> variables = new HashSet<>();
+            Set<Standardized<Variable>> standardizedVariables = new HashSet<>();
 
             for (Param param : structDef.getParams()) {
                 // If we add a variable, and it already exists, we have a duplicate
-                if (!variables.add(param.variable)) {
-                    throw new TypecheckerException(typeErrorInStructMessage + "duplicate variables with same name exist");
+                if (!standardizedVariables.add(Standardized.of(param.variable))) {
+                    throwTypecheckerException(typeErrorInStructMessage, structDef, param,
+                            "struct parameter `" + param.variable.getName() + "` has already been defined");
                 }
 
                 // Else, check that all variable declarations for the struct do not: have a return type of void
                 // and that any struct name does exist
-                typecheckParamNoVoidAndStructNameMustExist(typeErrorInStructMessage, param);
+                final String onVariableDeclaration = typeErrorInStructMessage + " on parameter `" +
+                        param.variable.getName() + "` declaration";
+                typecheckTypeNotVoidAndStructNameMustExist(onVariableDeclaration, structDef, param.getType());
             }
         }
     }
 
-    private void typecheckParamNoVoidAndStructNameMustExist(String prefix, Param param) throws TypecheckerException {
-        final String onVariableDeclaration = String.format(prefix + ", on variable declaration for %s: ",
-                param.variable.name);
-        Type paramType = param.type;
-
-        if (paramType instanceof VoidType) {
-            throw new TypecheckerException(onVariableDeclaration + "void is not a valid variable type");
+    private void typecheckTypeNotVoidAndStructNameMustExist(String error, AbstractSyntaxTreeNode parent,
+                                                            Type type) throws TypecheckerException {
+        // If we are a void type, throw an error
+        if (type instanceof VoidType) {
+            throwTypecheckerException(error, parent, type, "`void` is only a valid type for function return values");
         }
 
-        if (!(paramType instanceof StructType)) {
+        // If we aren't a struct type, we don't care
+        if (!(type instanceof StructType)) {
             return;
         }
 
-        StructType paramStructType = (StructType) paramType;
+        // If we are a struct type, make sure we have a valid struct definition
+        StructType paramStructType = (StructType) type;
         StructName paramStructName = paramStructType.getStructName().get();
 
-        if (structNameToDef.containsKey(paramStructName)) {
+        if (structNameToDef.containsKey(Standardized.of(paramStructName))) {
             return;
         }
 
-        String errorMessage = String.format("struct type %s is not defined", paramStructName.structName);
-        throw new TypecheckerException(onVariableDeclaration + errorMessage);
+        String detailedErrorMessage = String.format("struct type `%s` is not defined", paramStructName.getName());
+        throwTypecheckerException(error, parent, type, detailedErrorMessage);
     }
 
     // Map of statements to their typechecking functions
     private static final Map<Class<? extends Statement>, 
-            TypecheckingVoidFunction<Typechecker, Statement, Map<Variable, Type>>> STMT_TO_TYPE_FUNC = Map.of(
+            TypecheckingVoidFunction<Typechecker, Statement, Map<Standardized<Variable>, Type>>> STMT_TO_TYPE_FUNC = Map.of(
         AssignStmt.class, Typechecker::typecheckAssignStmt,
         BreakStmt.class, Typechecker::typecheckBreakStmt,
         ExpressionStmt.class, Typechecker::typecheckExpStmt,
@@ -189,7 +251,7 @@ public class Typechecker {
         WhileStmt.class, Typechecker::typecheckWhileStmt
     );
 
-    private void typecheckStatements(Map<Variable, Type> typeEnv) throws TypecheckerException {
+    private void typecheckStatements(Map<Standardized<Variable>, Type> typeEnv) throws TypecheckerException {
         
         for (Statement stmt : program.getStatements()) {          
             // Get the statements class
@@ -197,7 +259,7 @@ public class Typechecker {
 
             if (!STMT_TO_TYPE_FUNC.containsKey(stmtClass)) {
                 // Isn't a statement?
-                throw new TypecheckerException("Expected statement, got: " + stmtClass.toString());
+                throw new UnsupportedOperationException("Map did not contain mapping function for: " + stmtClass);
             }
 
             // These functions will throw exceptions if there are type errors
@@ -205,87 +267,89 @@ public class Typechecker {
         }
     }
 
-    public void typecheckAssignStmt(final Statement stmt, final Map<Variable, Type> typeEnv)
+    public void typecheckAssignStmt(final Statement stmt, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         final String beingParsed = "assignment statement";
 
         AssignStmt assignStmt = (AssignStmt) stmt;
         Variable variable = assignStmt.variable;
 
-        Type variableType = throwTypecheckerExceptionOnVariableNotExists(beingParsed, variable, typeEnv);
+        Type variableType = throwTypecheckerExceptionOnVariableNotExists(beingParsed, stmt, variable, typeEnv);
         Type expressionType = typecheckExp(assignStmt.expression, typeEnv);
 
-        throwTypecheckerExceptionOnMismatchedTypes(beingParsed, variableType, expressionType);
+        throwTypecheckerExceptionOnMismatchedTypes(beingParsed, stmt, expressionType, variableType, expressionType);
 
         // Set the expression type to be type of the variable
         assignStmt.expression.setExpressionType(variableType);
     }
 
-    public void typecheckBreakStmt(final Statement breakStmt, final Map<Variable, Type> typeEnv)
+    public void typecheckBreakStmt(final Statement breakStmt, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         throw new TypecheckerException("Not implemented yet!");
         // Type test = new VoidType();
         // return test;
     }
 
-    public void typecheckExpStmt(final Statement expStmt, final Map<Variable, Type> typeEnv)
+    public void typecheckExpStmt(final Statement expStmt, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         ExpressionStmt castExpStmt = (ExpressionStmt)expStmt;
         // Get expression from the expression statement, typecheck that
         typecheckExp(castExpStmt.getExpression(), typeEnv);
     }
 
-    public void typecheckIfElseStmt(final Statement ifElseStmt, final Map<Variable, Type> typeEnv)
+    public void typecheckIfElseStmt(final Statement ifElseStmt, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         throw new TypecheckerException("Not implemented yet!");
         // Type test = new VoidType();
         // return test;
     }
 
-    public void typecheckPrintlnStmt(final Statement printLnStmt, final Map<Variable, Type> typeEnv)
+    public void typecheckPrintlnStmt(final Statement printLnStmt, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         throw new TypecheckerException("Not implemented yet!");
         // Type test = new VoidType();
         // return test;
     }
 
-    public void typecheckReturnStmt(final Statement returnStmt, final Map<Variable, Type> typeEnv)
+    public void typecheckReturnStmt(final Statement returnStmt, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         throw new TypecheckerException("Not implemented yet!");
         // Type test = new VoidType();
         // return test;
     }
 
-    public void typecheckStmtBlock(final Statement stmtBlock, final Map<Variable, Type> typeEnv)
+    public void typecheckStmtBlock(final Statement stmtBlock, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         throw new TypecheckerException("Not implemented yet!");
         // Type test = new VoidType();
         // return test;
     }
 
-    public void typecheckVardecStmt(final Statement vardecStmt, final Map<Variable, Type> typeEnv)
+    public void typecheckVardecStmt(final Statement vardecStmt, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         VardecStmt castVardecStmt = (VardecStmt)vardecStmt;
-        // Get type
+
+        // Get type and make sure it's not void or a struct name that does not exist
         Type type = castVardecStmt.getType();
+        typecheckTypeNotVoidAndStructNameMustExist("vardec statement", vardecStmt, type);
+
         // Compare to expression
         Type expType = typecheckExp(castVardecStmt.getExpression(), typeEnv);
-        // If these are the same type
-        if (!type.equals(expType)) {
-            throw new TypecheckerException("Vardec declared type is " + type.getParsedValue()
-                                           + " but expression is " + expType.getParsedValue());
-        }
+
+        // Throw if these aren't the same type
+        throwTypecheckerExceptionOnMismatchedTypes("vardec statement", vardecStmt, expType, type, expType);
+
         // Add variable to map (throw if already exists)
-        if (typeEnv.put(castVardecStmt.getVariable(), type) != null) {
-            throw new TypecheckerException("Variable " + castVardecStmt.getVariable().getName() 
-                                           + " already declared");
+        if (typeEnv.put(Standardized.of(castVardecStmt.getVariable()), type) != null) {
+            throwTypecheckerExceptionOnVariableExists("vardec statement", vardecStmt, castVardecStmt.getVariable(),
+                    typeEnv);
         }
 
         // Set the expression type to be type of the variable
         castVardecStmt.getExpression().setExpressionType(type);
     }
 
-    public void typecheckWhileStmt(final Statement whileStmt, final Map<Variable, Type> typeEnv)
+    public void typecheckWhileStmt(final Statement whileStmt, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         throw new TypecheckerException("Not implemented yet!");
         // Type test = new VoidType();
@@ -294,34 +358,37 @@ public class Typechecker {
 
     // Map of Expression classes to functions that return their types
     private static final Map<Class<? extends Expression>, 
-            TypecheckingFunction<Typechecker, Expression, Map<Variable, Type>, Type>> EXP_TO_TYPE_FUNC = Map.of(
-        BoolLiteralExp.class, (typechecker, exp, typeEnv) -> new BoolType(),
-        FuncCallExp.class, Typechecker::typecheckFuncCallExp,
-        IntLiteralExp.class, (typechecker, exp, typeEnv) -> new IntType(),
-        NullExp.class, (typechecker, exp, typeEnv) -> new StructType(null),
-        ParenExp.class, Typechecker::typecheckParenExp,
-        StructAllocExp.class, Typechecker::typecheckStructAllocExp,
-        VariableExp.class, Typechecker::typecheckVarExp,
-        BinaryOpExp.class, Typechecker::typecheckerBinOpExp,
-        DotExp.class, Typechecker::typecheckDotExp,
-        UnaryOpExp.class, Typechecker::typecheckUnaryOpExp
+            TypecheckingFunction<Typechecker, Expression, Map<Standardized<Variable>, Type>, Type>> EXP_TO_TYPE_FUNC = Map.of(
+                    // We already handle the expression types in the parser for literal values
+                    BoolLiteralExp.class, (typechecker, exp, typeEnv) -> exp.getExpressionType(),
+                    IntLiteralExp.class, (typechecker, exp, typeEnv) -> exp.getExpressionType(),
+                    NullExp.class, (typechecker, exp, typeEnv) -> exp.getExpressionType(),
+
+                    // We need to typecheck these manually
+                    FuncCallExp.class, Typechecker::typecheckFuncCallExp,
+                    ParenExp.class, Typechecker::typecheckParenExp,
+                    StructAllocExp.class, Typechecker::typecheckStructAllocExp,
+                    VariableExp.class, Typechecker::typecheckVarExp,
+                    BinaryOpExp.class, Typechecker::typecheckerBinOpExp,
+                    DotExp.class, Typechecker::typecheckDotExp,
+                    UnaryOpExp.class, Typechecker::typecheckUnaryOpExp
     );
 
-    public Type typecheckFuncCallExp(final Expression funcCallExp, final Map<Variable, Type> typeEnv)
+    public Type typecheckFuncCallExp(final Expression funcCallExp, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         throw new TypecheckerException("Not implemented yet!");
         // Type test = new VoidType();
         // return test;
     }
 
-    public Type typecheckParenExp(final Expression parenExp, final Map<Variable, Type> typeEnv)
+    public Type typecheckParenExp(final Expression parenExp, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         ParenExp castParenExp = (ParenExp)parenExp;
         // Get expression in the parentheses, typecheck that
         return typecheckExp(castParenExp.getExp(), typeEnv);
     }
 
-    public Type typecheckStructAllocExp(final Expression exp, final Map<Variable, Type> typeEnv)
+    public Type typecheckStructAllocExp(final Expression exp, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         final String beingParsed = "struct allocation expression";
         StructAllocExp structAllocExp = (StructAllocExp) exp;
@@ -330,11 +397,11 @@ public class Typechecker {
         StructType structType = structAllocExp.getStructType();
         StructName structName = structType.getStructName().get();
 
-        final String structWhereWeAre = "struct " + structName.structName;
-        StructDef structDef = structNameToDef.get(structName);
+        final String structWhereWeAre = "struct type `" + structName.getSource().getSourceString() + "`";
+        StructDef structDef = structNameToDef.get(Standardized.of(structName));
 
         if (structDef == null) {
-            throwTypecheckerException(beingParsed, structWhereWeAre + " is not defined");
+            throwTypecheckerException(beingParsed, exp, structName, structWhereWeAre + " is not defined");
         }
 
         List<Param> structDefinedParams = structDef.getParams();
@@ -346,7 +413,10 @@ public class Typechecker {
         if (definedParameters != actualParameters) {
             final String errorSuffixFormat = "expected exactly %d allocation parameters for " + structWhereWeAre
                     + " but received %d allocation parameters";
-            throwTypecheckerException(beingParsed, String.format(errorSuffixFormat, definedParameters, actualParameters));
+            String errorSuffix = String.format(errorSuffixFormat, definedParameters, actualParameters);
+
+            AbstractSyntaxTreeNode child = actualParameters == 0 ? exp : structAllocParams.get(actualParameters - 1);
+            throwTypecheckerException(beingParsed, exp, child, errorSuffix);
         }
 
         for (int i = 0; i < definedParameters; i++) {
@@ -356,9 +426,9 @@ public class Typechecker {
             Variable definedVariable = definedParam.variable;
 
             // Check that the variable names match (in order)
-            if (!definedVariable.equals(allocationParam.var)) {
-                throwTypecheckerException(beingParsed, "expected allocation variable " + definedVariable.name
-                        + " but received " + allocationParam.var.name);
+            if (!Standardized.standardizedEquals(definedVariable, allocationParam.var)) {
+                throwTypecheckerException(beingParsed, exp, allocationParam, "expected allocation for variable `"
+                        + definedVariable.name + "` but received allocation for variable `" + allocationParam.var.name + "`");
             }
 
             Type definedType = definedParam.type;
@@ -367,8 +437,8 @@ public class Typechecker {
             Type allocationExpType = typecheckExp(allocationExp, typeEnv);
 
             // Check that the type defined matches the allocation expression's type
-            throwTypecheckerExceptionOnMismatchedTypes(beingParsed + " " + structWhereWeAre + " for allocation variable "
-                    + definedVariable.name, definedType, allocationExpType);
+            throwTypecheckerExceptionOnMismatchedTypes(beingParsed + " " + structWhereWeAre + " for allocation variable `"
+                    + definedVariable.name + "`", exp, allocationExpType, definedType, allocationExpType);
 
             // This parameter is safe!
         }
@@ -378,63 +448,67 @@ public class Typechecker {
         return structAllocExp.getStructType();
     }
 
-    public Type typecheckVarExp(final Expression variableExp, final Map<Variable, Type> typeEnv)
+    public Type typecheckVarExp(final Expression expression, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
-        VariableExp castVarExp = (VariableExp)variableExp;
-        // Use optionals instead of this
-        Type type = typeEnv.get(castVarExp.getVar());
-        if (type == null) {
-            throw new TypecheckerException("Variable " + castVarExp.getVar().getName() 
-                                           + " not previously declared");
-        } else {
-            return type;
-        }
+        VariableExp variableExp = (VariableExp) expression;
+
+        return throwTypecheckerExceptionOnVariableNotExists("variable expression", variableExp, variableExp.getVar(),
+                typeEnv);
     }
+
+    private static final BoolType BOOL_TYPE = Node.setNodeSource(new BoolType(), "bool");
+    private static final IntType INT_TYPE = Node.setNodeSource(new IntType(), "int");
 
     // Map of Enums to the types they can operate on
     private static final Map<OperatorEnum, List<Type>> OP_TO_OPERAND_TYPE = new HashMap<>() {{
-        put(OperatorEnum.NOT, List.of(new BoolType()));
-        put(OperatorEnum.OR, Arrays.asList(new BoolType()));
-        put(OperatorEnum.AND, Arrays.asList(new BoolType()));
-        put(OperatorEnum.DOUBLE_EQUALS, Arrays.asList(new BoolType(), new IntType()));
-        put(OperatorEnum.NOT_EQUALS, Arrays.asList(new BoolType(), new IntType()));
-        put(OperatorEnum.LESS_THAN_EQUALS, Arrays.asList(new IntType()));
-        put(OperatorEnum.GREATER_THAN_EQUALS, Arrays.asList(new IntType()));
-        put(OperatorEnum.LESS_THAN, Arrays.asList(new IntType()));
-        put(OperatorEnum.GREATER_THAN, Arrays.asList(new IntType()));
-        put(OperatorEnum.PLUS, Arrays.asList(new IntType()));
-        put(OperatorEnum.MINUS, Arrays.asList(new IntType()));
-        put(OperatorEnum.MULTIPLY, Arrays.asList(new IntType()));
-        put(OperatorEnum.DIVISION, Arrays.asList(new IntType()));
+        put(OperatorEnum.NOT, List.of(BOOL_TYPE));
+        put(OperatorEnum.OR, Arrays.asList(BOOL_TYPE));
+        put(OperatorEnum.AND, Arrays.asList(BOOL_TYPE));
+        put(OperatorEnum.DOUBLE_EQUALS, Arrays.asList(BOOL_TYPE, INT_TYPE));
+        put(OperatorEnum.NOT_EQUALS, Arrays.asList(BOOL_TYPE, INT_TYPE));
+        put(OperatorEnum.LESS_THAN_EQUALS, Arrays.asList(INT_TYPE));
+        put(OperatorEnum.GREATER_THAN_EQUALS, Arrays.asList(INT_TYPE));
+        put(OperatorEnum.LESS_THAN, Arrays.asList(INT_TYPE));
+        put(OperatorEnum.GREATER_THAN, Arrays.asList(INT_TYPE));
+        put(OperatorEnum.PLUS, Arrays.asList(INT_TYPE));
+        put(OperatorEnum.MINUS, Arrays.asList(INT_TYPE));
+        put(OperatorEnum.MULTIPLY, Arrays.asList(INT_TYPE));
+        put(OperatorEnum.DIVISION, Arrays.asList(INT_TYPE));
     }};
 
     // Map of Enums to the types they evaluate to
     private static final Map<OperatorEnum, Type> OP_TO_EVAL_TYPE = new HashMap<>() {{
-        put(OperatorEnum.NOT, new BoolType());
-        put(OperatorEnum.OR, new BoolType());
-        put(OperatorEnum.AND, new BoolType());
-        put(OperatorEnum.DOUBLE_EQUALS, new BoolType());
-        put(OperatorEnum.NOT_EQUALS, new BoolType());
-        put(OperatorEnum.LESS_THAN_EQUALS, new BoolType());
-        put(OperatorEnum.GREATER_THAN_EQUALS, new BoolType());
-        put(OperatorEnum.LESS_THAN, new BoolType());
-        put(OperatorEnum.GREATER_THAN, new BoolType());
-        put(OperatorEnum.PLUS, new IntType());
-        put(OperatorEnum.MINUS, new IntType());
-        put(OperatorEnum.MULTIPLY, new IntType());
-        put(OperatorEnum.DIVISION, new IntType());
+        put(OperatorEnum.NOT, BOOL_TYPE);
+        put(OperatorEnum.OR, BOOL_TYPE);
+        put(OperatorEnum.AND, BOOL_TYPE);
+        put(OperatorEnum.DOUBLE_EQUALS, BOOL_TYPE);
+        put(OperatorEnum.NOT_EQUALS, BOOL_TYPE);
+        put(OperatorEnum.LESS_THAN_EQUALS, BOOL_TYPE);
+        put(OperatorEnum.GREATER_THAN_EQUALS, BOOL_TYPE);
+        put(OperatorEnum.LESS_THAN, BOOL_TYPE);
+        put(OperatorEnum.GREATER_THAN, BOOL_TYPE);
+        put(OperatorEnum.PLUS, INT_TYPE);
+        put(OperatorEnum.MINUS, INT_TYPE);
+        put(OperatorEnum.MULTIPLY, INT_TYPE);
+        put(OperatorEnum.DIVISION, INT_TYPE);
     }};
 
     public boolean operandsAreValidType(List<Type> validTypes, Type type) {
-        return validTypes.contains(type);
+        for (Type validType : validTypes) {
+            if (validType.hasTypeEquality(type)) {
+                return true;
+            }
+        }
+
+        return false;
     }
 
     // In all cases, we need our types to match - what if LHT and RHT are both in the valid type list, but aren't the same?
     public boolean operandsAreValidType(List<Type> validTypes, Type leftHandType, Type rightHandType) {
-        return validTypes.contains(leftHandType) && validTypes.contains(rightHandType);
+        return operandsAreValidType(validTypes, leftHandType) && leftHandType.hasTypeEquality(rightHandType);
     }
 
-    public Type typecheckerBinOpExp(final Expression binaryOpExp, final Map<Variable, Type> typeEnv)
+    public Type typecheckerBinOpExp(final Expression binaryOpExp, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         // Get the left and right hand sides
         BinaryOpExp castBinOpExp = (BinaryOpExp)binaryOpExp;
@@ -448,16 +522,26 @@ public class Typechecker {
 
         // This may be unnecessary, but check that the operand is in the map
         if (!OP_TO_OPERAND_TYPE.containsKey(op) || !OP_TO_EVAL_TYPE.containsKey(op)) {
-            throw new TypecheckerException("Expected operator, but found: " + op.toString());
+            throw new UnsupportedOperationException("Map did not find binary operator for: " + op.toString());
         }
+
         // Use the operator to decide what type the expressions should be
         List<Type> validOperandTypes = OP_TO_OPERAND_TYPE.get(op);
 
+        final String error = op.getSymbol() + " expression";
+
         // Throw exception if the operands are invalid types
+        throwTypecheckerExceptionOnMismatchedTypes(error, binaryOpExp, castBinOpExp.getRightExp(),
+                leftHandType, rightHandType);
+
         if (!operandsAreValidType(validOperandTypes, leftHandType, rightHandType)) {
-            throw new TypecheckerException("Operands are of invalid type: " + validOperandTypes.toString()
-                    + ", " + leftHandType.getNodeTypeDescriptor() + " "
-                    + rightHandType.getNodeTypeDescriptor());
+            // This should really be a more descriptive error message depending on the list of valid types
+            String errorMessage = String.format("expected expression(s) to be type of: {%s}",
+                    validOperandTypes.stream()
+                        .map(type -> "`" + type.getSource().getSourceString() + "`")
+                        .collect(Collectors.joining(" | ")));
+
+            throwTypecheckerException(error, binaryOpExp, binaryOpExp, errorMessage);
         }
 
         // Return the binary operation's evaluation type and set our type for the next expression
@@ -467,7 +551,7 @@ public class Typechecker {
         return evalType;
     }
 
-    public Type typecheckDotExp(final Expression exp, final Map<Variable, Type> typeEnv)
+    public Type typecheckDotExp(final Expression exp, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         final String beingParsed = "dot expression";
 
@@ -475,19 +559,20 @@ public class Typechecker {
         Type leftHandType = typecheckExp(dotExp.getLeftExp(), typeEnv);
 
         if (!(leftHandType instanceof StructType)) {
-            final String errorSuffix = "expected a reference to a struct instance but received a type of "
-                    + leftHandType.getParsedValue();
-            throwTypecheckerException(beingParsed, errorSuffix);
+            final String errorSuffix = "expected a struct reference but received a type of `"
+                    + leftHandType.getParsedValue() + "`";
+            throwTypecheckerException(beingParsed, exp, leftHandType, errorSuffix);
         }
 
         StructType structType = (StructType) leftHandType;
         if (structType.isNullStruct()) {
-            final String errorSuffix = "expected a reference to a struct instance but received raw reference to null";
-            throwTypecheckerException(beingParsed, errorSuffix);
+            final String errorSuffix = "expected a struct reference but received raw `null` reference";
+            throwTypecheckerException(beingParsed, exp, leftHandType, errorSuffix);
         }
 
         // By this point, if we evaluated an expression that is a type of struct, that struct should absolutely exist
-        StructDef structDef = structNameToDef.get(structType.getStructName().get());
+        StructName structName = structType.getStructName().get();
+        StructDef structDef = structNameToDef.get(Standardized.of(structName));
 
         Variable structField = dotExp.getRightVar();
         Type structFieldType = null;
@@ -501,15 +586,15 @@ public class Typechecker {
 
         // Check that the variable we used does exist as a parameter (or field) for the struct
         if (structFieldType == null) {
-            final String errorSuffix = "expected a valid struct field but received unknown field " + structField.name;
-            throwTypecheckerException(beingParsed, errorSuffix);
+            final String errorSuffix = "parameter `" + structField.name + "` is not defined on struct type `" + structType + "`";
+            throwTypecheckerException(beingParsed, exp, structField, errorSuffix);
         }
 
         dotExp.setExpressionType(structFieldType);
         return structFieldType;
     }
 
-    public Type typecheckUnaryOpExp(final Expression exp, final Map<Variable, Type> typeEnv)
+    public Type typecheckUnaryOpExp(final Expression exp, final Map<Standardized<Variable>, Type> typeEnv)
             throws TypecheckerException {
         // This is VERY similar to parsing binary ops, probably could refactor at some point
         UnaryOpExp unaryOpExp = (UnaryOpExp) exp;
@@ -521,7 +606,12 @@ public class Typechecker {
         List<Type> validTypes = OP_TO_OPERAND_TYPE.get(op);
         if (!operandsAreValidType(validTypes, expressionType)) {
             // This should really be a more descriptive error message depending on the list of valid types
-            throwTypecheckerException(op.getSymbol() + " expression", "type mismatch");
+            String errorMessage = String.format("expected expression(s) to be type of: {%s}",
+                    validTypes.stream()
+                            .map(type -> "`" + type.getSource().getSourceString() + "`")
+                            .collect(Collectors.joining(" | ")));
+
+            throwTypecheckerException(op.getSymbol() + " expression", exp, expressionType, errorMessage);
         }
 
         Type evalType = OP_TO_EVAL_TYPE.get(op);
@@ -531,14 +621,15 @@ public class Typechecker {
     }
 
     public Type typecheckExp(final Expression exp,
-                                    final Map<Variable, Type> typeEnv) throws TypecheckerException {
+                                    final Map<Standardized<Variable>, Type> typeEnv) throws TypecheckerException {
 
         // Get the expression's class
         Class<? extends Expression> expClass = exp.getClass();
 
         if (!EXP_TO_TYPE_FUNC.containsKey(expClass)) {
             // Do I throw an error here? This should be an expression and it isn't? IDK
-            throw new TypecheckerException("Expected expression, got: " + expClass.toString());
+            // Maybe an "unsupported exception" letting us know we did development bad is good here
+            throw new UnsupportedOperationException("Map did not contain mapping function for: " + expClass);
         }
 
         Type type = EXP_TO_TYPE_FUNC.get(expClass).apply(this, exp, typeEnv);
